--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <header>
+        <header>                                                                    
             <h1>Tri's Gaming Page</h1>
         </header>
         <nav>
@@ -23,12 +23,15 @@
         <main>
             <img src="https://live.staticflickr.com/65535/52823382015_d4c6472d5a_b.jpg" alt="Tri" />
             <div>
-                <h2>
+                <h1>
                     I live two lives in two different worlds
-                </h2>
+                </h1>
                 <p>In moments when we feel lost or lonely in the real world, gaming can offer a solace. Gamgit initing is not just a hobby, but a way of life. It's a world where we can be ourselves and tap into our inherent potential, allowing us to feel useful and productive.</p>
+                <br>
                 <p>If you're looking to level up your gaming skills and go from a beginner to a pro, I can guide you. Together, we can explore the vast gaming world, learn new strategies and techniques, and discover the joys of competing and collaborating with others.</p>
+                <br>
                 <p>But beyond just entertainment, gaming can also teach us valuable life lessons. It can help us develop problem-solving skills, strategic thinking, and teamwork, which can be applied in real-life situations.</p>
+                <br>
                 <p>So, if you ever feel lost or in need of a community, look no further than the gaming world. It's a place where you can be yourself and discover the potential within you.</p>
                 <br>
                 <p>In the real world, I go by my given name of <strong>Tri</strong>, but in the gaming world, I am known as <strong>Master Ki</strong>, a professional gamer and reputable coach.</p>
@@ -37,7 +40,7 @@
 
         <div class="sections">
             <section>
-                <h2>My game genres:</h2>
+                <h1>My game genres:</h1>
                 <ol>
                     <li>Real-time strategy (RTS)</li>
                     <li>Multiplayer online battle arena (MOBA)</li>
@@ -46,7 +49,7 @@
                 </ol>
             </section>
             <section>
-                <h2>Connect me:</h2>
+                <h1>Connect me:</h1>
                 <ul>
                     <li>Steam ID: <a href="https://steamcommunity.com/id/talentran12/">talentran12</a></li>
                     <li>Battle.net ID: <a href="">Talen#11828</a></li>
@@ -56,10 +59,10 @@
             </section>
         </div>
         <div class="sections">
-            <img src="https://pbs.twimg.com/profile_images/1013921848961056768/b3uRdcuU_400x400.jpg" alt="Starcraft2"/>
+            <img src="https://external-preview.redd.it/dABitqgS2wBqldGLdcofxhEOa3sWFwnq9chKjFV9Z84.jpg?auto=webp&s=b0e92a545e3d6f9f7dde0ad9622c6e1a69cc5451" alt="Starcraft2"/>
             <img src="https://seeklogo.com/images/D/dota-2-logo-7804D430C9-seeklogo.com.png" alt="Dota2"/>
-            <img src="https://seeklogo.com/images/D/diablo-3-logo-776C6119CB-seeklogo.com.jpg" alt="Diablo3"/>
-            <img src="https://pbs.twimg.com/profile_images/1567142977826324480/V-GN2Ncl_400x400.png" alt="WorldOfWarship"/>
+            <img src="https://wow.zamimg.com/uploads/screenshots/small/661405.jpg" alt="Diablo3"/>
+            <img src="https://styles.redditmedia.com/t5_ogkyd/styles/communityIcon_e4capshknkr91.png" alt="WorldOfWarship"/>
         </div>
 
         <form>
@@ -67,15 +70,14 @@
                 <legend>Do you want to play with me?</legend>
                 <label for="contact">Game:</label>
                 <input type="contact" name="contact" id="contact">
-                <label for="q">Contact information:</label>
-                <textarea id="q"></textarea>
-
+                <label for="contact">Contact information:</label>
+                <textarea id="contact"></textarea>
                 <button type="submit">Submit</button>
             </fieldset>
         </form>
         
         <footer>
-            <p>Let's go to <a href="">Tri's game page</a></p>
+            <p>Let's go to <a href="https://www.facebook.com/TalenTran.2811">Tri's facebook</a></p>
         </footer>
     </div>
 </body>
